[package]
name = "clvog"
version = "0.1.0"
edition = "2021"
authors = ["moriar1"]
license = "Unlicense license"
description = "Command line anime music video organizer"
readme = "README.md"
repository = "https://github.com/moriar1/clvog"
keywords = ["cli", "amv", "anime", "video"]

[dependencies]
clap = { version = "4.5.16", features = ["cargo"] }

[[bin]]
name = "clvog"
